syntax = "proto3";

package file;

option go_package = "pkg/messanger/file";

service FilesService {
    rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
    rpc GetFile(GetFileRequest) returns (GetFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
}

message UploadFileRequest {
    string name = 1;
    bool public = 2;
    string recipient_id = 4;
    bytes data = 5;
}
message UploadFileResponse {
    string id = 1;
}
message GetFileRequest {
    string id = 1;
}
message GetFileResponse {
    string name = 1;
    string content_type = 2;
    int64 size = 3;
    bytes data = 4;
}
message DeleteFileRequest {
    string id = 1;
}
message DeleteFileResponse {
    bool success = 1;
}